src/test/resources/private/typechecking/fail/access/access_fail_method_02.jova

class Evaluation{
  private int testing() {
     return 0;
  }
}

class Test3{
  public Evaluation e;
}

class Test2{
  public Test3 t;
}

class Test{
  public Test2 t;
}

class Finish {
  public int finishing() {
    Test test;

    return test.t.t.e.testing();
  }

}